# task-management-system

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: cb3ccf56a1f6_initial_migration.py
app/: config.py  container.py  main.py
app/application/services/: task_service.py  user_service.py
app/application/use_cases/: task.py  user.py
app/domain/entities/: common.py  task.py  user.py
app/domain/interfaces/: task_repository.py  user_repository.py
app/entrypoints/api/: dependencies.py
app/entrypoints/api/routes/: auth.py  tasks.py  users.py
app/entrypoints/api/schemas/: task.py  user.py
app/infrastructure/: security.py
app/infrastructure/db/: base.py
app/infrastructure/db/models/: __init__.py  task.py  user.py
app/infrastructure/repositories/: task_repository.py  user_repository.py
app/tests/: conftest.py  test_tasks.py  test_users.py
requirements/: base.txt  dev.txt
